[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.15", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "tempo"
version = "0.1.0"
description = "teMPO: Native utilities for MPS and MPO tensor networks (Python layer)"
authors = [{name = "Xabier Fernández", email = "xabifdez@proton.me"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/XabiF/tempo"
